# ComfyUI-Inspector

./: README.md  __init__.py  display_node.py  pyproject.toml
js/: display_text.js
